# veclite

./: Cargo.toml  README.md
e2e_tests/: .gitignore  Cargo.toml  build.rs
e2e_tests/src/: main.rs
src/: main.rs
src/cores/: database.rs  index.rs  storage.rs
src/types/: filter.rs  record.rs
src/utils/: kmeans.rs
veclite/: odb_index  odb_params
